auth/auth-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  namespace: default
  name: auth-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-redirect-from: /
    nginx.ingress.kubernetes.io/proxy-redirect-to: /auth/
spec:
  tls:
  - hosts:
    - eco-n-v4.contentservice.net
    - eco-n.contentservice.net
    secretName: cs-tls-secret-digicert
  rules:
  - host: eco-n-v4.contentservice.net
    http:
      paths:
      - path: /auth
        backend:
          serviceName: auth-service
          servicePort: 4500
  - host: eco-n.contentservice.net
    http:
      paths:
      - path: /auth
        backend:
          serviceName: auth-service
          servicePort: 4500
